link_libraries("cppev")

find_package(GTest)
link_libraries("gtest")
enable_testing()

function(compile_and_enable_test testname_)
    add_executable(${testname_} ${testname_}.cc)
    add_test(NAME ${testname_} COMMAND ${testname_})
endfunction(compile_and_enable_test)

compile_and_enable_test(test_async_logger)
compile_and_enable_test(test_thread_pool)
compile_and_enable_test(test_buffer)
compile_and_enable_test(test_nio_evlp)
compile_and_enable_test(test_lock)
compile_and_enable_test(test_common_utils)
compile_and_enable_test(test_subprocess)
compile_and_enable_test(test_lru_cache)
compile_and_enable_test(test_ipc)
compile_and_enable_test(test_linux_specific)
