find_package(GTest)
enable_testing()

function(compile_and_enable_test testname_)
    add_executable(${testname_} ${testname_}.cc)
    add_test(NAME ${testname_} COMMAND ${testname_})
    target_link_libraries(${testname_} cppev gtest)
endfunction(compile_and_enable_test)

add_library(test_dyld_impl SHARED test_dyld_impl.cc)
target_link_libraries(test_dyld_impl cppev)

compile_and_enable_test(test_async_logger)
compile_and_enable_test(test_thread_pool)
compile_and_enable_test(test_runnable)
compile_and_enable_test(test_buffer)
compile_and_enable_test(test_nio_evlp)
compile_and_enable_test(test_lock)
compile_and_enable_test(test_utils)
compile_and_enable_test(test_subprocess)
compile_and_enable_test(test_lru_cache)
compile_and_enable_test(test_ipc)
compile_and_enable_test(test_timer)
compile_and_enable_test(test_dynamic_loader)
